--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@ crossorigin="anonymous">
                 <a class="nav-link active" aria-current="page" href="index.html">Головна сторінка</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/pages/whywe.html">Чому ми?</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="/pages/forum.html">Форум</a>
               </li>
               <li class="nav-item dropdown">
@@ -41,7 +44,7 @@ crossorigin="anonymous">
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="btn btn-outline-success" type="submit">Знайти</button>
             </form>
           </div>
         </div>
@@ -50,8 +53,30 @@ crossorigin="anonymous">
       <div class="container my-5">
         <div class="col-md-8, col-lg-6, mx-auto">
           <h1>Сервер GTA V про Україну!</h1>
-          <p style="font-size:add_size">MASON RP - це рольова гра в стилі GTA для персональних комп'ютерів, де гравці повинні "підніматися" у великому, відкритому світі, створеному на основі реальної України.  Головною метою є стати найвпливовішим гравцем на сервері. 
+          <p style="font-size:add_size"><b>MASON RP</b> - це рольова гра в стилі GTA для персональних комп'ютерів, де гравці повинні "підніматися" у великому, відкритому світі, створеному на основі реальної України.  Головною метою є стати найвпливовішим гравцем на сервері. 
             А тепер детальніше про все:</h3>
+        </div>
+
+        <br>
+        
+        <div class="col-md-8, col-lg-6, mx-auto">
+          <h4>Реєстрація</h4>
+          <form>
+            <div class="mb-3 col-md-3">
+              <label for="exampleInputEmail1" class="form-label">Електронною пошта</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <div id="emailHelp" class="form-text">Не діліться своєю електронною поштою ні з ким.</div>
+            </div>
+            <div class="mb-3 col-md-3">
+              <label for="exampleInputPassword1" class="form-label">Пароль</label>
+              <input type="password" class="form-control" id="exampleInputPassword1">
+            </div>
+            <div class="mb-3 form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Я погоджуюсь з <a target="_blank" href="https://discord.com/channels/854403565266272266/854403565929758805">умовами використання</a></label>
+            </div>
+            <button type="submit" class="btn btn-primary">Зареєструватись</button>
+          </form>        
         </div>
       </div>
 
