--- a/pages/faq.html
+++ b/pages/faq.html
@@ -22,7 +22,10 @@ crossorigin="anonymous">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Головна сторінка</a>
+                <a class="nav-link" aria-current="page" href="/index.html">Головна сторінка</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/pages/whywe.html">Чому ми?</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/pages/forum.html">Форум</a>
@@ -41,7 +44,7 @@ crossorigin="anonymous">
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="btn btn-outline-success" type="submit">Знайти</button>
             </form>
           </div>
         </div>
