--- a/pages/forum.html
+++ b/pages/forum.html
@@ -24,7 +24,9 @@ crossorigin="anonymous">
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="/index.html">Головна сторінка</a>
               </li>
-              
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/pages/whywe.html">Чому ми?</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link active" href="/pages/forum.html">Форум</a>
               </li>
@@ -42,7 +44,7 @@ crossorigin="anonymous">
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="btn btn-outline-success" type="submit">Знайти</button>
             </form>
           </div>
         </div>
