--- a/pages/whywe.html
+++ b/pages/whywe.html
@@ -25,7 +25,10 @@ crossorigin="anonymous">
                 <a class="nav-link" aria-current="page" href="/index.html">Головна сторінка</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/pages/forum.html">Форум</a>
+                <a class="nav-link active" aria-current="page" href="/pages/whywe.html">Чому ми?</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/forum.html">Форум</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -41,7 +44,7 @@ crossorigin="anonymous">
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="btn btn-outline-success" type="submit">Знайти</button>
             </form>
           </div>
         </div>
