--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MASON RP</title>
     <link rel="icon" type="image/x-icon" href="/material/icon.ico">
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" 
-rel="stylesheet" 
-integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
-crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/light-mode.css" id="themeMode">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
@@ -21,7 +18,7 @@ crossorigin="anonymous">
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
+              <li class="nav-item dark">
                 <a class="nav-link active" aria-current="page" href="index.html">Головна сторінка</a>
               </li>
               <li class="nav-item">
@@ -41,7 +38,11 @@ crossorigin="anonymous">
                   <li><a class="dropdown-item" href="/pages/faq.html">FAQ</a></li>
                 </ul>
               </li>
+              
             </ul>
+            <li class="nav-item d-flex" style="margin-right: 20px;">
+              <button class="btn btn-outline-dark" id="switchMode" href="">Змінити тему</button>
+            </li>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Знайти</button>
@@ -52,7 +53,7 @@ crossorigin="anonymous">
 
       <div class="container my-5">
         <div class="col-md-8, col-lg-6, mx-auto">
-          <h1>Сервер GTA V про Україну!</h1>
+          <h1>Гра про життя в Україні!</h1>
           <p style="font-size:add_size"><b>MASON RP</b> - це рольова гра в стилі GTA для персональних комп'ютерів, де гравці повинні "підніматися" у великому, відкритому світі, створеному на основі реальної України.  Головною метою є стати найвпливовішим гравцем на сервері. 
             А тепер детальніше про все:</h3>
         </div>
@@ -83,8 +84,9 @@ crossorigin="anonymous">
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
 crossorigin="anonymous"></script>
+  <script src="/css/mode-controll.js"></script>
 </body>
 </html>
