--- a/pages/whywe.html
+++ b/pages/whywe.html
@@ -50,6 +50,11 @@ crossorigin="anonymous">
         </div>
       </nav>
 
+      <div class="container-fluid my-5">
+        <div class="col-md-8, col-lg-6, mx-auto">
+          
+        </div>
+      </div>
       
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
