--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
   <nav class="navbar">
     <div class="container">
-      <a href="#" class="navbar-brand"><h2 style="margin-bottom: 65%;">MASON</h2></a>
+      <a href="index.html" class="navbar-brand"><h2 style="margin-bottom: 80%;">MASON</h2></a>
 
       <div class="navbar-wrap"></div>
         <ul class="navbar-menu">
