--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <li><a href="#">FAQ</a></li>
         </ul>
 
+      <button href="#" class="themeModes" id="themeMode"> Змінити тему </button>
       <a href="#" class="callback">Тех. підтримка</a>
       </div>
 
