--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
   <link rel="icon" type="image/x-icon" href="/material/icon.ico">
   
   <!-- CSS only -->
-  <link rel="stylesheet" href="/css/style.css">
-  <!-- <link rel="stylesheet" href="/css/light-mode.css" id="themeMode"> -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-</head>
+  <link rel="stylesheet" href="/css/style.css" id="theme">
+  </head>
 <body>
     
   <nav class="navbar">
     <div class="container">
-      <a href="index.html" class="navbar-brand"><h2 style="margin-bottom: 80%;">MASON</h2></a>
+      <a href="index.html" class="navbar-brand"><h2>MASON</h2></a>
 
       <div class="navbar-wrap"></div>
         <ul class="navbar-menu">
@@ -27,7 +25,7 @@
           <li><a href="#">FAQ</a></li>
         </ul>
 
-      <button href="#" class="themeModes" id="themeMode"> Змінити тему </button>
+      <button href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
       <a href="#" class="callback">Тех. підтримка</a>
       </div>
 
@@ -49,6 +47,5 @@
   
   <!-- JavaScript Bundle with Popper -->
   <script src="/css/mode-controll.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
