--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MASON RP</title>
   <link rel="icon" type="image/x-icon" href="/material/icon.ico">
-  
+
   <!-- CSS only -->
-  <link rel="stylesheet" href="/css/style.css" id="theme">
+  <link rel="stylesheet" href="./css/style.css" id="theme">
   </head>
 <body>
-    
+
   <nav class="navbar">
     <div class="container">
       <a href="index.html" class="navbar-brand"><h2>MASON</h2></a>
@@ -37,14 +37,14 @@
   <div class="container my-5">
     <div class="col-md-8, col-lg-6, mx-auto">
       <h1>Гра про життя в Україні!</h1>
-      <p style="font-size:add_size"><b>MASON RP</b> - це рольова гра в стилі GTA для персональних комп'ютерів, де гравці повинні "підніматися" у великому, відкритому світі, створеному на основі реальної України.  Головною метою є стати найвпливовішим гравцем на сервері. 
+      <p style="font-size:add_size"><b>MASON RP</b> - це рольова гра в стилі GTA для персональних комп'ютерів, де гравці повинні "підніматися" у великому, відкритому світі, створеному на основі реальної України.  Головною метою є стати найвпливовішим гравцем на сервері.
         А тепер детальніше про все:</h3>
     </div>
 
 
 
 
-  
+
   <!-- JavaScript Bundle with Popper -->
   <script src="/css/mode-controll.js"></script>
 </body>
