--- a/index.html
+++ b/index.html
@@ -40,24 +40,27 @@
     </div>
     <div>
       <form>
-        <label style="font-size: 32px" for="email"><b>Електронна пошта</b></label>
+        <label style="font-size: 32px" for="email"><b>Електронна пошта</b>
         <br>
         <input class="emailInput" type="text" placeholder="Введіть свою електронну адресу" name="psw" requeired>
+      </label>
         <br>
         <br>
 
-        <label style="font-size: 32px" for="email"><b>Пароль</b></label>
+        <label style="font-size: 32px" for="email"><b>Пароль</b>
         <br>
         <input class="emailInput" type="text" placeholder="Введіть свій пароль" name="psw" requeired>
+      </label>
         <br>
         <br>
-        <label style="font-size: 32px" for="email"><b>Підтвердіть пароль</b></label>
+        <label style="font-size: 32px" for="email"><b>Підтвердіть пароль</b>
         <br>
         <input class="emailInput" type="text" placeholder="Підтвердіть свій пароль" name="psw" requeired>
+      </label>
         <br>
         <br>
         <div>
-          <input type="checkbox" class="custom-checkbox" id="happy" name="happy" value="yes"> Я погоджуюсь з <a href="https://discord.com/channels/854403565266272266/854403565929758805"> умовами використання </a>
+          <label><input type="checkbox" class="custom-checkbox" id="happy" name="happy" value="yes"> Я погоджуюсь з <a href="https://discord.com/channels/854403565266272266/854403565929758805"> умовами використання </a></label>
         </div>
       </form>
     </div>
