--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="/material/icon.ico">
   
   <!-- CSS only -->
-  <link rel="stylesheet" href="css/dark-mode.css" id="theme">
+  <link rel="stylesheet" href="./css/dark-mode.css" id="theme">
   </head>
 <body>
     
@@ -70,6 +70,6 @@
 
   
   <!-- JavaScript Bundle with Popper -->
-  <script src="/css/mode-controll.js"></script>
+  <script src="css/mode-controll.js"></script>
 </body>
 </html>
