--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <br>
         <br>
         <div>
-          <label><input type="checkbox" class="custom-checkbox" id="happy" name="happy" value="yes"> Я погоджуюсь з <a href="https://discord.com/channels/854403565266272266/854403565929758805"> умовами використання </a></label>
+          <label><input type="checkbox" class="custom-checkbox" id="happy" name="happy" value="yes"> Я погоджуюсь з <a class="custom-a" href="https://discord.com/channels/854403565266272266/854403565929758805"> умовами використання </a></label>
         </div>
       </form>
     </div>
