--- a/index.html
+++ b/index.html
@@ -36,31 +36,34 @@
 
   <div class="containerBox">
     <div style="text-align: center;">
-      <h1>Гра про життя в Україні - РЕЄСТРАЦІЯ</h1>
+      <h1 style="margin-right: 7%;font-size: 50px">MASON RP - РЕЄСТРАЦІЯ</h1>
     </div>
     <div>
       <form>
-        <label style="font-size: 32px" for="email"><b>Електронна пошта</b>
+        <label class="regLabel" style="font-size: 32px" for="email"><b>Електронна пошта</b>
         <br>
         <input class="emailInput" type="text" placeholder="   Введіть свою електронну адресу" name="psw" requeired>
       </label>
         <br>
         <br>
 
-        <label style="font-size: 32px" for="email"><b>Пароль</b>
+        <label class="regLabel" style="font-size: 32px" for="email"><b>Пароль</b>
         <br>
         <input class="emailInput" type="text" placeholder="   Введіть свій пароль" name="psw" requeired>
       </label>
         <br>
         <br>
-        <label style="font-size: 32px" for="email"><b>Підтвердіть пароль</b>
+        <label class="regLabel" style="font-size: 32px" for="email"><b>Підтвердіть пароль</b>
         <br>
         <input class="emailInput" type="text" placeholder="   Підтвердіть свій пароль" name="psw" requeired>
       </label>
         <br>
         <br>
         <div>
-          <label><input type="checkbox" class="custom-checkbox" id="happy" name="happy" value="yes"> Я погоджуюсь з <a class="custom-a" href="https://discord.com/channels/854403565266272266/854403565929758805"> умовами використання </a></label>
+          <label id="confirmCheckBox" class="regLabel"><input type="checkbox" class="custom-checkbox" id="happy" name="happy" value="yes"> Я погоджуюсь з <a class="custom-a" href="https://discord.com/channels/854403565266272266/854403565929758805"> умовами використання </a></label>
+        </div>
+        <div>
+          <button class="confirm-button" id="cofirmButton">Закінчити реєстрацію</button>
         </div>
       </form>
     </div>
