--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
           <label id="confirmCheckBox" class="regLabel"><input type="checkbox" class="custom-checkbox" id="happy" name="happy" value="yes"> Я погоджуюсь з <a class="custom-a" href="https://discord.com/channels/854403565266272266/854403565929758805"> умовами використання </a></label>
         </div>
         <div>
-          <button class="confirm-button" id="cofirmButton">Закінчити реєстрацію</button>
+          <button class="confirm-button" id="cofirmButton">Закінчити реєстрацію</button> 
+          <button class="login-button" id="cofirmButton">Увійти</button>
         </div>
       </form>
     </div>
