--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
     </div>
   </nav>
 
-
-
   <div class="containerBox">
     <div style="text-align: center;">
       <h1 style="margin-right: 7%;font-size: 50px">MASON RP - РЕЄСТРАЦІЯ</h1>
@@ -60,7 +58,7 @@
         <br>
         <br>
         <div>
-          <label id="confirmCheckBox" class="regLabel"><input type="checkbox" class="custom-checkbox" id="happy" name="happy" value="yes"> Я погоджуюсь з <a class="custom-a" href="https://discord.com/channels/854403565266272266/854403565929758805"> умовами використання </a></label>
+          <label id="confirmCheckBox" class="regLabel"><input type="checkbox" class="custom-checkbox" id="happy" name="happy" value="yes"> Я погоджуюсь з <a class="custom-a" href="/pages/userLicense.html"> умовами використання </a></label>
         </div>
         <div>
           <button class="confirm-button" id="cofirmButton">Закінчити реєстрацію</button> 
