--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
           <label id="confirmCheckBox" class="regLabel"><input type="checkbox" class="custom-checkbox" id="happy" name="happy" value="yes"> Я погоджуюсь з <a class="custom-a" href="/pages/userLicense.html"> умовами використання </a></label>
         </div>
         <div>
-          <button class="confirm-button" id="cofirmButton">Закінчити реєстрацію</button>
+          <a href="pages/Authorazing/register.php">
+          <button class="confirm-button" id="cofirmButton">Зареєструватися</button>
+        </a>
+
+          <button class="login-button" id="cofirmButton">Увійти</button>
         </div>
       </form>
     </div>
@@ -70,7 +74,7 @@
 
 
   
-  <!-- JavaScript Bundle with Popper -->
+  <!-- JavaScript -->
   <script src="css/mode-controll.js"></script>
 </body>
 </html>
