--- a/pages/userLicense.html
+++ b/pages/userLicense.html
@@ -16,25 +16,22 @@
     <div class="container">
       <a href="/index.html" class="navbar-brand"><h2>MASON</h2></a>
 
-      <div class="navbar-wrap"></div>
-        <ul class="navbar-menu">
-          <li><a href="#">Чому саме ми?</a></li>
-          <li><a href="#">Форум</a></li>
-          <li><a href="#">Допомогти проекту</a></li>
-          <li><a href="#">Як почати грати?</a></li>
-          <li><a href="#">FAQ</a></li>
-        </ul>
 
-      <button href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
+      <button href="#" style="margin-left: 56.4%;" class="buttonTheme" id="themeMode"> Змінити тему </button>
       <a href="#" class="callback">Тех. підтримка</a>
       </div>
-
     </div>
   </nav>
 
 
+
   
-  <!-- JavaScript Bundle with Popper -->
+
+  
+  <!-- JavaScript -->
   <script src="/css/mode-controll.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
+  integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
+  crossorigin="anonymous"></script>
 </body>
 </html>
