--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="navbar-wrap"></div>
         <ul class="navbar-menu">
           <li><a href="#">Чому саме ми?</a></li>
-          <li><a href="#">Форум</a></li>
+          <li><a target="_blank" href="https://masonrp.forumotion.me/">Форум</a></li>
           <li><a href="#">Допомогти проекту</a></li>
           <li><a href="#">Як почати грати?</a></li>
           <li><a href="#">FAQ</a></li>
