--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="material/icon.ico">
   
   <!-- CSS only -->
-  <link rel="stylesheet" href="/css/dark-mode.css" id="theme">
+  <link rel="stylesheet" href="css/dark-mode.css" id="theme">
   </head>
 <body>
     
@@ -18,15 +18,11 @@
 
       <div class="navbar-wrap"></div>
         <ul class="navbar-menu">
-          <li><a href="#">Чому саме ми?</a></li>
-<<<<<<< Updated upstream
-          <li><a target="_blank" href="https://masonrp.forumotion.me/">Форум</a></li>
-=======
+          <li><a href="pages/whywe.html">Чому саме ми?</a></li>
           <li><a target="_blank" href="https://localhost/phpbb/viewforum.php?f=2">Форум</a></li>
->>>>>>> Stashed changes
-          <li><a href="#">Допомогти проекту</a></li>
-          <li><a href="#">Як почати грати?</a></li>
-          <li><a href="#">FAQ</a></li>
+          <li><a href="pages/donate.html">Допомогти проекту</a></li>
+          <li><a href="pages/help.html">Як почати грати?</a></li>
+          <li><a href="pages/faq.html">FAQ</a></li>
         </ul>
 
       <button href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
