--- a/pages/help.html
+++ b/pages/help.html
@@ -1,59 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MASON RP - Як почати грати?</title>
-    <link rel="icon" type="image/x-icon" href="/material/icon.ico">
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" 
-rel="stylesheet" 
-integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
-crossorigin="anonymous">
-</head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MASON RP</title>
+  <link rel="icon" type="image/x-icon" href="/material/icon.ico">
+  
+  <!-- CSS only -->
+  <link rel="stylesheet" href="/css/dark-mode.css" id="theme">
+  </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><b>MASON</b></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/index.html">Головна сторінка</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/pages/whywe.html">Чому ми?</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/pages/forum.html">Форум</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Додаткові функції
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="/pages/donate.html">Донат</a></li>
-                  <li><a class="dropdown-item active" href="/pages/help.html">Як почати грати?</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="/pages/faq.html">FAQ</a></li>
-                </ul>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Знайти</button>
-            </form>
-          </div>
-        </div>
-      </nav>
+    
+  <nav class="navbar">
+    <div class="container">
+      <a href="/index.html" class="navbar-brand"><h2>MASON</h2></a>
 
-      
+      <div class="navbar-wrap"></div>
+        <ul class="navbar-menu">
+          <li><a href="/pages/whywe.html">Чому саме ми?</a></li>
+          <li><a target="_blank" href="https://localhost/phpbb/viewforum.php?f=2">Форум</a></li>
+          <li><a href="/pages/donate.html">Допомогти проекту</a></li>
+          <li><a href="/pages/help.html">Як почати грати?</a></li>
+          <li><a href="/pages/faq.html">FAQ</a></li>
+        </ul>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
-integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
-crossorigin="anonymous"></script>
+      <button href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
+      <a href="#" class="callback">Тех. підтримка</a>
+      </div>
+
+    </div>
+  </nav>
+
+  <div class="containerBox">
+    <div style="text-align: center;">
+      <h1>Наразі ми доповнюємо цю сторінку...</h1>
+      <h2>Вибачаємося за очікування</h6> 
+      <hr style="width: 600px;">
+      <h2>Можете поки що подивитися на котика</h2>
+      <img style="border-radius:24px" src="https://i.gifer.com/37Jf.gif">
+    </div>
+  </div>
+
+  
+
+
+
+  
+  <!-- JavaScript Bundle with Popper -->
+  <script src="css/mode-controll.js"></script>
 </body>
 </html>
