--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
       <div class="navbar-wrap"></div>
         <ul class="navbar-menu">
-          <li><a href="#">Чому саме ми?</a></li>
-          <li><a target="_blank" href="https://masonrp.forumotion.me/">Форум</a></li>
-          <li><a href="#">Допомогти проекту</a></li>
-          <li><a href="#">Як почати грати?</a></li>
-          <li><a href="#">FAQ</a></li>
+          <li><a href="pages/whywe.html">Чому саме ми?</a></li>
+          <li><a target="_blank" href="https://localhost/phpbb/viewforum.php?f=2">Форум</a></li>
+          <li><a href="pages/donate.html">Допомогти проекту</a></li>
+          <li><a href="pages/help.html">Як почати грати?</a></li>
+          <li><a href="pages/faq.html">FAQ</a></li>
         </ul>
 
       <button href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
@@ -61,10 +61,7 @@
           <label id="confirmCheckBox" class="regLabel"><input type="checkbox" class="custom-checkbox" id="happy" name="happy" value="yes"> Я погоджуюсь з <a class="custom-a" href="/pages/userLicense.html"> умовами використання </a></label>
         </div>
         <div>
-          <a href="pages/Authorazing/register.php">
-          <button class="confirm-button" id="cofirmButton">Зареєструватися</button>
-        </a>
-
+          <button class="confirm-button" id="cofirmButton">Закінчити реєстрацію</button> 
           <button class="login-button" id="cofirmButton">Увійти</button>
         </div>
       </form>
@@ -74,7 +71,7 @@
 
 
   
-  <!-- JavaScript -->
+  <!-- JavaScript Bundle with Popper -->
   <script src="css/mode-controll.js"></script>
 </body>
 </html>
