--- a/pages/userLicense.html
+++ b/pages/userLicense.html
@@ -16,22 +16,32 @@
     <div class="container">
       <a href="/index.html" class="navbar-brand"><h2>MASON</h2></a>
 
+      <div class="navbar-wrap"></div>
+        <ul class="navbar-menu">
+          <li><a href="/pages/whywe.html">Чому саме ми?</a></li>
+          <li><a target="_blank" href="https://localhost/phpbb/viewforum.php?f=2">Форум</a></li>
+          <li><a href="/pages/donate.html">Допомогти проекту</a></li>
+          <li><a href="/pages/help.html">Як почати грати?</a></li>
+          <li><a href="/pages/faq.html">FAQ</a></li>
+        </ul>
 
-      <button href="#" style="margin-left: 56.4%;" class="buttonTheme" id="themeMode"> Змінити тему </button>
+      <button href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
       <a href="#" class="callback">Тех. підтримка</a>
       </div>
+
     </div>
   </nav>
 
+  <div class="containerBox">
+    <div style="text-align: center;">
+      
+    </div>
+  </div>
+
 
 
   
-
-  
-  <!-- JavaScript -->
-  <script src="/css/mode-controll.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
-  integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
-  crossorigin="anonymous"></script>
+  <!-- JavaScript Bundle with Popper -->
+  <script src="css/mode-controll.js"></script>
 </body>
 </html>
