--- a/index.html
+++ b/index.html
@@ -34,44 +34,15 @@
 
   <div class="containerBox">
     <div style="text-align: center;">
-      <h1 style="margin-right: 7%;font-size: 50px">MASON RP - РЕЄСТРАЦІЯ</h1>
+      <h1><div class="clock"></div></h1>
     </div>
-    <div>
-      <form>
-        <label class="regLabel" style="font-size: 32px" for="email"><b>Електронна пошта</b>
-        <br>
-        <input class="emailInput" type="text" placeholder="   Введіть свою електронну адресу" name="psw" requeired>
-      </label>
-        <br>
-        <br>
-
-        <label class="regLabel" style="font-size: 32px" for="email"><b>Пароль</b>
-        <br>
-        <input class="emailInput" type="text" placeholder="   Введіть свій пароль" name="psw" requeired>
-      </label>
-        <br>
-        <br>
-        <label class="regLabel" style="font-size: 32px" for="email"><b>Підтвердіть пароль</b>
-        <br>
-        <input class="emailInput" type="text" placeholder="   Підтвердіть свій пароль" name="psw" requeired>
-      </label>
-        <br>
-        <br>
-        <div>
-          <label id="confirmCheckBox" class="regLabel"><input type="checkbox" class="custom-checkbox" id="happy" name="happy" value="yes"> Я погоджуюсь з <a class="custom-a" href="/pages/userLicense.html"> умовами використання </a></label>
-        </div>
-        <div>
-          <button class="confirm-button" id="cofirmButton">Закінчити реєстрацію</button> 
-          <button class="login-button" id="cofirmButton">Увійти</button>
-        </div>
-      </form>
-    </div>
-
+  </div>
 
 
 
   
   <!-- JavaScript Bundle with Popper -->
   <script src="css/mode-controll.js"></script>
+  <script src="assets/clock.js"></script>
 </body>
 </html>
