--- a/pages/donate.html
+++ b/pages/donate.html
@@ -34,9 +34,15 @@
 
   <div class="containerBox">
     <div style="text-align: center;">
-      
+      <h1>Наразі ми доповнюємо цю сторінку...</h1>
+      <h2>Вибачаємося за очікування</h6> 
+      <hr style="width: 600px;">
+      <h2>Можете поки що подивитися на котика</h2>
+      <img style="border-radius:24px" src="https://bestgif.su/_ph/46/2/81396229.gif">
     </div>
   </div>
+
+  
 
 
 
