--- a/pages/faq.html
+++ b/pages/faq.html
@@ -34,9 +34,15 @@
 
   <div class="containerBox">
     <div style="text-align: center;">
-      
+      <h1>Наразі ми доповнюємо цю сторінку...</h1>
+      <h2>Вибачаємося за очікування</h6> 
+      <hr style="width: 600px;">
+      <h2>Можете поки що подивитися на котика</h2>
+      <img style="border-radius:24px" src="https://cs4.pikabu.ru/post_img/2016/01/02/7/1451730332150132797.gif">
     </div>
   </div>
+
+  
 
 
 
