--- a/pages/donate.html
+++ b/pages/donate.html
@@ -26,7 +26,7 @@
         </ul>
 
       <button href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
-      <a href="#" class="callback">Тех. підтримка</a>
+      <a href="mailto:vproject.masonrp@gmail.com" class="callback">Тех. підтримка</a>
       </div>
 
     </div>
