--- a/pages/whywe.html
+++ b/pages/whywe.html
@@ -55,15 +55,10 @@
       <p class="cardDescription" style="font-size: 20.px;" >Наша гра — це дзеркало життя, тому працювати теж доведеться.  Ми додали десятки професій та робіт у гру, а ти вже маєш обрати, ким хочеш бути: далекобійником чи таксистом?
       </p>
     </div>
-    
-
   </div>
 
-
-
-  
   <!-- JavaScript Bundle-->
-  <script src="assets/cards/card.js"></script>
+  <script src="assets/cards.js"></script>
   <script src="css/mode-controll.js"></script>
 </body>
 </html>
