--- a/pages/faq.html
+++ b/pages/faq.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MASON RP</title>
-  <link rel="icon" type="image/x-icon" href="/material/icon.ico">
+  <link rel="icon" type="image/x-icon" href="//material/icon.ico">
   
   <!-- CSS only -->
-  <link rel="stylesheet" href="/css/dark-mode.css" id="theme">
+  <link rel="stylesheet" href="//css/dark-mode.css" id="theme">
   </head>
 <body>
     
@@ -19,10 +19,10 @@
       <div class="navbar-wrap"></div>
         <ul class="navbar-menu">
           <li><a href="/pages/whywe.html">Чому саме ми?</a></li>
-          <li><a target="_blank" href="https://localhost/phpbb/viewforum.php?f=2">Форум</a></li>
+          <li><a target="_blank" href="https://masonrp.at.ua/">Форум</a></li>
           <li><a href="/pages/donate.html">Допомогти проекту</a></li>
           <li><a href="/pages/help.html">Як почати грати?</a></li>
-          <li><a href="/pages/faq.html">FAQ</a></li>
+          <li><a style="transform: scale(1.2); opacity: 1; text-decoration:overline;" href="/pages/faq.html">FAQ</a></li>
         </ul>
 
       <button href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
