--- a/pages/faq.html
+++ b/pages/faq.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="//material/icon.ico">
   
   <!-- CSS only -->
-  <link rel="stylesheet" href="//css/dark-mode.css" id="theme">
+  <link rel="stylesheet" href="/css/dark-mode.css" id="theme">
   </head>
 <body>
     
