--- a/pages/whywe.html
+++ b/pages/whywe.html
@@ -8,13 +8,13 @@
   <link rel="icon" type="image/x-icon" href="//material/icon.ico">
   
   <!-- CSS only -->
-  <link rel="stylesheet" href="./css/dark-mode.css" id="theme">
+  <link rel="stylesheet" href="../css/dark-mode.css" id="theme">
   </head>
 <body>
     
   <nav class="navbar">
     <div class="container">
-      <a href="./index.html" class="navbar-brand"><h2>MASON</h2></a>
+      <a href="../index.html" class="navbar-brand"><h2>MASON</h2></a>
 
       <div class="navbar-wrap"></div>
         <ul class="navbar-menu">
