--- a/pages/userLicense.html
+++ b/pages/userLicense.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MASON RP</title
-  <link rel="icon" type="image/x-icon" href="//material/icon.ico">
+  <link rel="icon" type="image/x-icon" href="../material/icon.ico">
   
   <!-- CSS only -->
-  <link rel="stylesheet" href="//css/dark-mode.css" id="theme">
+  <link rel="stylesheet" href="../css/dark-mode.css" id="theme">
   </head>
 <body>
     
