--- a/pages/userLicense.html
+++ b/pages/userLicense.html
@@ -14,7 +14,7 @@
     
   <nav class="navbar">
     <div class="container">
-      <a href="/index.html" class="navbar-brand"><h2>MASON</h2></a>
+      <a href="../index.html" class="navbar-brand"><h2>MASON</h2></a>
 
       <div class="navbar-wrap"></div>
         <ul class="navbar-menu">
