--- a/pages/whywe.html
+++ b/pages/whywe.html
@@ -20,9 +20,9 @@
         <ul class="navbar-menu">
           <li><a style="transform: scale(1.2); opacity: 1; text-decoration:overline;" href="/pages/whywe.html">Чому саме ми?</a></li>
           <li><a target="_blank" href="https://masonrp.at.ua/">Форум</a></li>
-          <li><a href="/pages/donate.html">Допомогти проекту</a></li>
-          <li><a href="/pages/help.html">Як почати грати?</a></li>
-          <li><a href="/pages/faq.html">FAQ</a></li>
+          <li><a href="./pages/donate.html">Допомогти проекту</a></li>
+          <li><a href="./pages/help.html">Як почати грати?</a></li>
+          <li><a href="./pages/faq.html">FAQ</a></li>
         </ul>
 
       <button href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
