--- a/pages/donate.html
+++ b/pages/donate.html
@@ -18,11 +18,11 @@
 
       <div class="navbar-wrap"></div>
         <ul class="navbar-menu">
-          <li><a href="pages/whywe.html">Чому саме ми?</a></li>
+          <li><a href="whywe.html">Чому саме ми?</a></li>
           <li><a target="_blank" href="https://masonrp.at.ua/">Форум</a></li>
-          <li><a style="transform: scale(1.2); opacity: 1; text-decoration:overline;" href="pages/donate.html">Допомогти проекту</a></li>
-          <li><a href="pages/help.html">Як почати грати?</a></li>
-          <li><a href="pages/faq.html">FAQ</a></li>
+          <li><a style="transform: scale(1.2); opacity: 1; text-decoration:overline;" href="donate.html">Допомогти проекту</a></li>
+          <li><a href="help.html">Як почати грати?</a></li>
+          <li><a href="faq.html">FAQ</a></li>
         </ul>
 
       <button href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
