--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="pages/faq.html">FAQ</a></li>
         </ul>
 
-      <button href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
+      <button disabled="true" href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
       <a href="mailto:vproject.masonrp@gmail.com" class="callback">Тех. підтримка</a>
       </div>
 
