--- a/pages/faq.html
+++ b/pages/faq.html
@@ -25,7 +25,7 @@
           <li><a style="transform: scale(1.2); opacity: 1; text-decoration:overline;" href="faq.html">FAQ</a></li>
         </ul>
 
-      <button href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
+      <button disabled="true" href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
       <a href="mailto:vproject.masonrp@gmail.com" class="callback">Тех. підтримка</a>
       </div>
 
