--- a/pages/userLicense.html
+++ b/pages/userLicense.html
@@ -25,7 +25,7 @@
           <li><a href="faq.html">FAQ</a></li>
         </ul>
 
-      <button href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
+      <button disabled="true" href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
       <a href="#" class="callback">Тех. підтримка</a>
       </div>
 
