--- a/index.html
+++ b/index.html
@@ -38,7 +38,48 @@
     </div>
   </div>
 
+  <div class="containerBox">
+    <div style="text-align: left;">
+    <div class="newsTitle">
+      <h1 style="text-align: left;">Site Version 1.1.2 </h1>
+    </div>
+    <hr class="newsHR">
+    <div class="newsDecription">
+      <ul>
+        <li style="text-align: left"> Version date: 12/06/2022 </li>
+        <li style="text-align: left; color:greenyellow"> Next update will be in few days</li>
+      </ul>
 
+      <div class="newsSubTitle">
+        Bug fix:
+      </div>
+      <hr class="newsMiniHR">      
+      <ul>
+        <li style="text-align: left"> Normalyzed page switching </li>
+        <li style="text-align: left;"> Normalyzed dark theme mode</li>
+      </ul>
+      <div class="newsSubTitle">
+        Added:
+      </div>
+      <hr class="newsMiniHR">      
+      <ul>
+        <li style="text-align: left;"> Disabled button theme</li>
+        <li style="text-align: left;"> Added normal forum</li>
+      </ul>
+
+      <div class="newsSubTitle">
+        Plans:
+      </div>
+      <hr class="newsMiniHR">      
+      <ul>
+        <li style="text-align: left"> Add payment </li>
+        <li style="text-align: left;"> Add FAQ</li>
+        <li style="text-align: left;"> Add all elements for intalling client</li>
+        <li style="text-align: left;"> Bug fixing</li>
+      </ul>
+    </div>
+    </div>
+  </div>
 
   
   <!-- JavaScript Bundle with Popper -->
