--- a/pages/whywe.html
+++ b/pages/whywe.html
@@ -49,7 +49,7 @@
       <img class="cardImage" src="https://healthday.in.ua/images/sonyk-onlain2/sonnik-bandity-k-chemu-snjatsja-i-chto-oznachajut-sny-pro-banditov-0963795.jpg" alt="description">
       <p class="cardDescription" style="font-size: 21px;" >Почни з самих низів кримінального світу і згодом очоли мафіозний синдикат або стань поліцейським, оголосивши війну злочинності!</p>
     </div>
-    <div class="card" style="margin-left:36%">
+    <div class="card">
       <h3 class="cardTitle">БАГАТНІСТЬ РОБІТ</h1>
       <img class="cardImage" src="https://economy.24tv.ua/resources/photos/news/202007/1383519.jpg?v=1611432621000&w=1200&h=675&fit=cover" alt="description">
       <p class="cardDescription" style="font-size: 20.px;" >Наша гра — це дзеркало життя, тому працювати теж доведеться.  Ми додали десятки професій та робіт у гру, а ти вже маєш обрати, ким хочеш бути: далекобійником чи таксистом?
