--- a/pages/help.html
+++ b/pages/help.html
@@ -38,11 +38,11 @@
       <h2>Вибачаємося за очікування</h6> 
       <hr style="width: 600px;">
       <h2>Можете поки що подивитися на котика</h2>
-      <img style="border-radius:24px" src="https://i.gifer.com/37Jf.gif">
+      <img style="border-radius:24px" src="https://bestgif.su/_ph/46/2/81396229.gif">
     </div>
   </div>
 
-  
+
 
 
 
