--- a/pages/donate.html
+++ b/pages/donate.html
@@ -32,18 +32,33 @@
     </div>
   </nav>
 
-  <div class="containerBox">
-    <div style="text-align: center;">
-      <h1>Наразі ми доповнюємо цю сторінку...</h1>
-      <h2>Вибачаємося за очікування</h6> 
-      <hr style="width: 600px;">
-      <h2>Можете поки що подивитися на котика</h2>
-      <img style="border-radius:24px" src="https://bestgif.su/_ph/46/2/81396229.gif">
-    </div>
-  </div>
-
   
 
+  
+  <div class="containerBox">
+    <div style="text-align: center;">
+      <h1></h1>
+      <h2>Чек-ліст товарів для придбання на сервері <b style="color:dodgerblue">Mason</b><b style="color:gold"> Role Play </b></h6> 
+      <hr style="width: 600px;">
+      
+      <div class="check-list">
+        <div class="checkListDecription" style="text-align: left;">
+          <ul>
+          <a class="checkListDecriptionItem" target="_blank" href="https://www.liqpay.ua/ru/checkout/card/i6166504227"><li class="checkListDecriptionItem"> Підтримати проект </li></a>
+          <a class="checkListDecriptionItem" target="_blank" href="https://www.liqpay.ua/ru/checkout/card/i6166504227"><li class="checkListDecriptionItem"> Предмет #2</li></a>
+          <a class="checkListDecriptionItem" target="_blank" href="https://www.liqpay.ua/ru/checkout/card/i6166504227"><li class="checkListDecriptionItem"> Предмет #3</li></a>
+          <a class="checkListDecriptionItem" target="_blank" href="https://www.liqpay.ua/ru/checkout/card/i6166504227"><li class="checkListDecriptionItem"> Предмет #4</li></a>
+          </ul>
+        </div>
+      </div>
+
+      <P>Радимо прочитати наші умови використання продукту, та іншіх засобів.</P>
+      <p style="opacity: 0.3;">* Купляючи щось ви автоматично погоджуєтесь з нашими умовами, галочка потрібна для вашого самоконтролю</p>
+      <input  type="checkbox" checked><labe>
+        Я погоджуюсь з <a href="userLicense.html" style="color:cornflowerblue;"> умовами використання</a>
+      </label><br>
+    </div>
+  </div>
 
 
   
