--- a/pages/userLicense.html
+++ b/pages/userLicense.html
@@ -20,7 +20,7 @@
         <ul class="navbar-menu">
           <li><a href="whywe.html">Чому саме ми?</a></li>
           <li><a target="_blank" href="https://masonrp.at.ua/">Форум</a></li>
-          <li><a href="hdonate.html">Допомогти проекту</a></li>
+          <li><a href="donate.html">Допомогти проекту</a></li>
           <li><a href="help.html">Як почати грати?</a></li>
           <li><a href="faq.html">FAQ</a></li>
         </ul>
