--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="newsDecription">
       <ul>
         <li style="text-align: left"> Version date: 13/06/2022 </li>
-        <li style="text-align: left; color:greenyellow"> Next update will be in few days</li>
+        <li style="text-align: left; color:gold"> Next update will be in some days</li>
       </ul>
 
       <div class="newsSubTitle">
