--- a/pages/donate.html
+++ b/pages/donate.html
@@ -43,7 +43,7 @@
       <div class="check-list">
         <div class="checkListDecription" style="text-align: left;">
           <ul>
-          <a class="checkListDecriptionItem" target="_blank" href="https://www.liqpay.ua/ru/checkout/card/i6166504227"><li class="checkListDecriptionItem"> Підтримати проект </li></a>
+          <a class="checkListDecriptionItem" target="_blank" href="https://www.liqpay.ua/ru/checkout/card/i6166504227"><li class="checkListDecriptionItem"> Підтримати проєкт </li></a>
           <a class="checkListDecriptionItem" target="_blank" href="https://www.liqpay.ua/ru/checkout/card/i6166504227"><li class="checkListDecriptionItem"> Предмет #2</li></a>
           <a class="checkListDecriptionItem" target="_blank" href="https://www.liqpay.ua/ru/checkout/card/i6166504227"><li class="checkListDecriptionItem"> Предмет #3</li></a>
           <a class="checkListDecriptionItem" target="_blank"href="https://www.liqpay.ua/ru/checkout/card/i6166504227"><li class="checkListDecriptionItem"> Предмет #4</li></a>
