--- a/pages/help.html
+++ b/pages/help.html
@@ -20,7 +20,7 @@
         <ul class="navbar-menu">
           <li><a href="whywe.html">Чому саме ми?</a></li>
           <li><a target="_blank" href="https://masonrp.at.ua/">Форум</a></li>
-          <li><a href=" donate.html">Допомогти проекту</a></li>
+          <li><a href=" donate.html">Допомогти проєкту</a></li>
           <li><a style="transform: scale(1.2); opacity: 1; text-decoration:overline;" href="help.html">Як почати грати?</a></li>
           <li><a href="faq.html">FAQ</a></li>
         </ul>
