--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul class="navbar-menu">
           <li><a href="pages/whywe.html">Чому саме ми?</a></li>
           <li><a target="_blank" href="https://masonrp.at.ua/">Форум</a></li>
-          <li><a href="pages/donate.html">Допомогти проекту</a></li>
+          <li><a href="pages/donate.html">Допомогти проєкту</a></li>
           <li><a href="pages/help.html">Як почати грати?</a></li>
           <li><a href="pages/faq.html">FAQ</a></li>
         </ul>
