--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
 
       <div class="navbar-wrap"></div>
         <ul class="navbar-menu">
-          <li><a href="pages/whywe.html">Чому саме ми?</a></li>
+          <li><a href="pages/whywe.html">Про проєкт</a></li>
           <li><a target="_blank" href="https://masonrp.at.ua/">Форум</a></li>
           <li><a href="pages/donate.html">Допомогти проєкту</a></li>
           <li><a href="pages/help.html">Як почати грати?</a></li>
-          <li><a href="pages/faq.html">FAQ</a></li>
         </ul>
 
       <button disabled="true" href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
