--- a/pages/whywe.html
+++ b/pages/whywe.html
@@ -18,11 +18,10 @@
 
       <div class="navbar-wrap"></div>
         <ul class="navbar-menu">
-          <li><a style="transform: scale(1.2); opacity: 1; text-decoration:overline;" href="whywe.html">Чому саме ми?</a></li>
+          <li><a style="transform: scale(1.2); opacity: 1; text-decoration:overline;" href="whywe.html">Про проєкт</a></li>
           <li><a target="_blank" href="https://masonrp.at.ua/">Форум</a></li>
           <li><a href="donate.html">Допомогти проєкту</a></li>
           <li><a href="help.html">Як почати грати?</a></li>
-          <li><a href="faq.html">FAQ</a></li>
         </ul>
 
       <button disabled="true" href="#" class="buttonTheme" id="themeMode"> Змінити тему </button>
