--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
   <div class="containerBox">
     <div style="text-align: left;">
     <div class="newsTitle">
-      <h1 style="text-align: left;">Site Version 1.1.3 </h1>
+      <h1 style="text-align: left;">Site Version 1.1.4 </h1>
     </div>
     <hr class="newsHR">
     <div class="newsDecription">
       <ul>
-        <li style="text-align: left"> Version date: 13/06/2022 </li>
+        <li style="text-align: left"> Version date: 19/06/2022 </li>
         <li style="text-align: left; color:gold"> Next update will be in some days</li>
       </ul>
 
@@ -54,14 +54,22 @@
       </div>
       <hr class="newsMiniHR">      
       <ul>
-        <li style="text-align: left; opacity: 0.3;"> Nothing </li>
+        <li style="text-align: left; opacity: 1;"> Pages names</li>
       </ul>
       <div class="newsSubTitle">
         Added:
       </div>
       <hr class="newsMiniHR">      
       <ul>
-        <li style="text-align: left;"> Payment system</li>
+        <li style="text-align: left; opacity: 0.3;"> Nothing</li>
+      </ul>
+
+      <div class="newsSubTitle">
+        Removed:
+      </div>
+      <hr class="newsMiniHR">      
+      <ul>
+        <li style="text-align: left;"> FAQ </li>
       </ul>
 
       <div class="newsSubTitle">
@@ -69,7 +77,6 @@
       </div>
       <hr class="newsMiniHR">      
       <ul>
-        <li style="text-align: left;"> Add FAQ</li>
         <li style="text-align: left;"> Add all elements for intalling client</li>
         <li style="text-align: left;"> Bug fixing</li>
       </ul>
