--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="newsDecription">
       <ul>
         <li style="text-align: left"> Version date: 26/06/2022 </li>
-        <li style="text-align: left; color:crimson"> Next update will before server relise</li>
+        <li style="text-align: left; color:crimson"> Next huge update will before server relise</li>
       </ul>
 
       <div class="newsSubTitle">
